--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "httpolyglot": "^0.1.2",
     "mediasoup": "^3.8.2",
     "mediasoup-client": "^3.6.37",
+    "nodemon": "^3.0.1",
     "socket.io": "^4.1.3"
   },
   "devDependencies": {
